--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,59 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["typescript", "node", "eslint", "prettier", "jest"],  
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@sendgrid/mail": "^8.1.0",
+    "axios": "^1.6.2",
+    "body-parser": "^1.19.0",
+    "chalk": "^4.1.1",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
+    "express": "^4.18.2",
+    "express-validator": "^6.12.0",
+    "http-errors": "~1.6.3",
+    "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
+    "morgan": "~1.9.1",
+    "pg": "^8.7.3",
+    "semver": "^7.5.4",
+    "simple-update-notifier": "^2.0.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@types/chalk": "^2.2.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^14",
+    "@types/supertest": "^6.0.1",
+    "@types/uuid": "^8.3.4",
+    "eslint": "^7.29.0",
+    "eslint-plugin-eslint-snake-case": "0.0.6",
+    "eslint-plugin-unicorn": "^34.0.0",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
+    "jest-extended": "^4.0.2",
+    "nodemon": "^3.0.2",
+    "prettier": "^2.3.2",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   }
 }
